@@ -2832,10 +2832,16 @@ colors.webpage.preferred_color_scheme:
     name: String
     valid_values:
       - auto: Use the system-wide color scheme setting.
-      - light: "Force a light theme. Only available with QtWebEngine 5.15.2+, same as
-            'auto' otherwise."
-      - dark: "Force a dark theme."
-  desc: "Value to use for `prefers-color-scheme:` for websites."
+      - light: Force a light theme.
+      - dark: Force a dark theme.
+  desc: >-
+    Value to use for `prefers-color-scheme:` for websites.
+
+    The "light" value is only available with QtWebEngine 5.15.2+. On older versions, it
+    is the same as "auto".
+
+    The "auto" value is broken on QtWebEngine 5.15.2 due to a Qt bug. There, it will
+    fall back to "light" unconditionally.
   backend:
     QtWebEngine: Qt 5.14
     QtWebKit: false
